# vox-dynastica

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  ROADMAP.md  ROADMAP.zh-CN.md
mod/: README.md  vox_dynastica.mod
mod/vox-dynastica/: descriptor.mod
mod/vox-dynastica/gui/: window_royal_court.gui  window_royal_library.gui
mod/vox-dynastica/gui/preload/: vd_textformatting.gui
mod/vox-dynastica/localization/english/: vox_dynastica_l_english.yml
mod/vox-dynastica/localization/simp_chinese/: vox_dynastica_l_simp_chinese.yml
schemas/: event.schema.json
scripts/: import_dynasty.py  import_narrow.py  import_real_save.py  probe_1006.py  probe_extras.py  probe_extras2.py  probe_family.py  probe_save.py
src/chronicler/: cli.py  companion.py  generator.py  schema.py  scoring.py  storage.py  tray.py
src/chronicler/agents/: __init__.py  base.py  court_historian.py  peasant_ballad.py
src/chronicler/parsers/: live_hook.py  save_import.py
src/chronicler/render/: html.py
tests/: test_companion.py  test_era_mood.py  test_scoring.py  test_smoke.py  test_watch_generate.py
