[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vox-dynastica"
version = "0.1.1"
description = "An AI-driven dynastic-chronicle companion for Crusader Kings 3 — voice of the dynasty."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vox Dynastica contributors" }]
keywords = ["ck3", "crusader-kings", "modding", "llm", "anthropic", "claude", "ollama"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "pydantic>=2.6",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
chronicler = "chronicler.cli:main"

[project.urls]
"Source" = "https://github.com/Americium3/vox-dynastica"
"Issues" = "https://github.com/Americium3/vox-dynastica/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chronicler = ["py.typed", "i18n/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# E501: long lines tolerated — many prompt strings deliberately exceed 100ch.
# UP042: not migrating existing (str, Enum) classes to StrEnum yet — subtle
#        semantic differences, scheduled for a separate audit.
ignore = ["E501", "UP042"]

[tool.ruff.lint.per-file-ignores]
# scripts/import_dynasty.py manipulates sys.path before importing chronicler;
# E402 (module-level-import-not-at-top) is intentional there.
"scripts/import_dynasty.py" = ["E402"]
